--- a/Bank_Account/Bank_Account.csproj
+++ b/Bank_Account/Bank_Account.csproj
@@ -42,8 +42,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Account.cs" />
+    <Compile Include="Checking.cs" />
+    <Compile Include="Client.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Savings.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
